# simd-intervaltree

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
benches/: query.rs
src/: builder.rs  lib.rs  mutable.rs  query.rs  tree.rs
src/simd/: arm.rs  mod.rs  scalar.rs  x86.rs
tests/: proptest.proptest-regressions  proptest.rs
