[package]
name = "simd-intervaltree"
version = "0.2.0"
edition = "2021"
rust-version = "1.86"
authors = ["Benjamin Coverston <ben.coverston@gmail.com>"]
license = "MIT"
description = "A SIMD-accelerated interval tree with zero-allocation queries"
repository = "https://github.com/bcoverston/simd-intervaltree"
keywords = ["interval", "tree", "simd", "range", "overlap"]
categories = ["data-structures", "algorithms"]
readme = "README.md"

[features]
default = ["std"]
std = []
# AVX-512 kernels. Requires Rust 1.89+ (AVX-512 intrinsics were stabilized in 1.89),
# so this is opt-in to keep the base crate on the stated MSRV.
avx512 = []

[dependencies]
# intentionally none: the library is dependency-free

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.8"
intervaltree = "0.2"  # For comparison benchmarks
rust-lapper = "1.1"
coitrees = "0.4"
superintervals = "0.3"
proptest = "1.4"

# jemalloc is a benchmark-harness concern, not a library concern.
# tikv-jemallocator does not build under MSVC, hence the target gate.
[target.'cfg(not(target_env = "msvc"))'.dev-dependencies]
tikv-jemallocator = "0.6"

[[bench]]
name = "query"
harness = false

[profile.release]
lto = true
codegen-units = 1

[profile.bench]
lto = true
codegen-units = 1

[lints.rust]
unsafe_code = "warn"

[lints.clippy]
all = "deny"
pedantic = "warn"
nursery = "warn"
